--- a/contracts/stacks/Clarinet.toml
+++ b/contracts/stacks/Clarinet.toml
@@ -1,12 +1,12 @@
 [project]
-name = "voting"
-requirements = []
+name = "proofstamp"
+description = "Unique voting contract for project 02"
+authors = ["solidworkssa"]
+telemetry = false
 cache_dir = ".cache"
 
-[contracts.voting]
-path = "contracts/voting.clar"
-clarity_version = 2
+[contracts.proofstamp]
+path = "contracts/proofstamp.clar"
 
-[repl]
-costs_version = 2
-parser_version = 2
+[repl.analysis]
+passes = ["check_checker"]
